# codex-test

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  WORKLOG.md  backend_analysis_report.md  nl_2_sql_시멘틱_레이어_에이전트_개발_작업계획서_draft_v_0.md  nl_2_sql_에이전트_big_query_시멘틱_레이어_기반_단계별_todo_v_0 (1).md  nl_2_sql_에이전트_big_query_시멘틱_레이어_기반_단계별_todo_v_0.md  pyproject.toml
.claude/: settings.local.json
.continue/rules/: CONTINUE.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
app/: config.py  deps.py  guardrails.json  main.py
app/bq/: connector.py
app/routers/: health.py  network.py  query.py  time_series.py
app/schema/: aliases.yaml  catalog.py
app/semantic/: datasets.yaml  ga4_schema.yaml  golden_queries.yaml  loader.py  metrics_definitions.yaml  semantic.yml
app/services/: context.py  customer_flow.py  executor.py  guard.py  linking.py  llm.py  nlu.py  normalize.py  planner.py  prompt.py  repair.py  sqlgen.py  summarize.py  templates.py  time_series.py  validation.py  validator.py
app/utils/: timeparse.py
docs/: NL2SQL_PIPELINE.md  meta_query_handling.md  validation_architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: ChatInput.vue  ChatMessage.vue  CustomerNetworkPanel.vue  NetworkGraph.vue  ProductTimeSeries.vue  PurchaseBubbleChart.vue  ResultPanel.vue  SankeyChart.vue
frontend/src/store/: chat.ts
frontend/src/types/: shims-force-graph.d.ts  shims-process.d.ts
frontend/src/views/: ChatView.vue  TimeSeriesView.vue
scripts/: stream_demo.py
tests/: test_health.py  test_query_stub.py  test_stream_sse.py
