[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2sql-agent"
version = "0.0.1"
description = "NL2SQL agent backed by a BigQuery semantic layer (scaffold)"
requires-python = ">=3.11"
authors = [{ name = "Your Team" }]
readme = "README.md"

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "google-cloud-bigquery>=3.25,<4",
  "google-cloud-logging>=3.10,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0",
  "pyyaml>=6.0.2",
  "openai>=1.48.0,<2",
  "anthropic>=0.34.2,<1",
  "google-generativeai>=0.7.2,<1",
  "sqlglot>=20.11.0,<21",
  "cachetools>=5.5.0,<6",
  "requests>=2.31,<3",
  "urllib3>=2.2,<2.6",
  "certifi==2025.8.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["frontend*", "tests*"]
